style.css
body {
	max-width: 21cm;
	padding-top: 0.5em;
	margin: auto;
}

@media (max-width: 480px) {
body {
  width: 100vw;
  padding: 0 0.5em;
  font-size: 12px;
  box-sizing: border-box;
}
}

@keyframes rotate{
    from{ transform: rotate(0); }
    to{ transform: rotate(360deg); }
}

rect.chord-span {
	fill: #0000;
	stroke: #07f7;
	stroke-width: 3;
}
rect.chord-span[data-selected="true"] {
	fill: #07f7;
}

/* Setting Style */
.setting {
	margin: 0.5em 0;
}

/* Search Song and Song List Style */
#search-song-container {
	display: inline-block;
	width: 18em;
	position: relative;
}
#search-song-container #search-song {
	width: 100%;
}
#song-list {
	display: none;
}
#search-song-container:focus-within #song-list {
	display: block;
}
#song-list {
    position: absolute;
    background: #fff;
    border: 1px solid #777;
    z-index: 1;
    min-height: 0.5em;
    max-height: min(80vh, 20em);
    overflow: hidden auto;
    box-sizing: border-box;
    width: max-content;
	min-width: 100%;
}
#song-list:empty::after {
	content: "Loading...";
	display: inline-block;
	width: 100%;
	text-align: center;
	font-style: italic;
}

#song-list option {
    user-select: none;
}
#song-list option[data-match="false"] {
    display: none;
}
#song-list option:hover {
    background: #07f;
    color: #fff;
}

/* Load Button and Save Button Style */
#load-song, #save-song {
	display: inline-flex;
	align-items: center;
}

#load-song[data-status="loading"]::after, #save-song[data-status="saving"]::after {
	content: " ";
	display: block;
	width: 1em;
	height: 1em;
	background: center / contain no-repeat url(loading.svg);
	animation: linear 1s rotate infinite;
}

/* Textarea Styles */
#open-textarea ~ label {
	display: block;
}
#open-textarea ~ label::after {
	content: " ";
	display: inline-block;
	width: 1.5em;
	height: 1em;
	background: center / 80% no-repeat url(v.png);
}
#open-textarea:checked ~ label::after {
	transform: scaleY(-1);
}
#open-textarea, #abc-text {
	display: none;
}
:checked ~ #abc-text {
	display: block;
}
#abc-text {
	width: 100%;
	height: 40em;
	box-sizing: border-box;
}


/* Meausre-Divide Styles */
#measure-divide {
	display: inline-grid;
	grid-auto-flow: column;
	column-gap: 1px;
  width: 400px;
  max-width: 100%;
	text-align: center;
}


#measure-divide input {
	display: none;
}
#measure-divide input + label {
	border: 1px solid #07f;
	border-radius: 3px;
}
#measure-divide input:checked + label {
	background: #07f;
	color: #fff;
}
#measure-divide[data-beat-num="2"] [value="3"],
#measure-divide[data-beat-num="2"] [value="6"],
#measure-divide[data-beat-num="4"] [value="3"],
#measure-divide[data-beat-num="4"] [value="6"],
#measure-divide[data-beat-num="3"] [value="2"],
#measure-divide[data-beat-num="3"] [value="4"],
#measure-divide[data-beat-num="3"] [value="8"],
#measure-divide[data-beat-num="6"] [value="4"],
#measure-divide[data-beat-num="6"] [value="8"]
{
	display: none;
}

/* Editor Styles */
#editor {
  border: 1px solid #333;
  box-sizing: border-box;
  width: 100%;
}

/* Chord Input Styles */
.chord-composer-container {
    position: sticky;
    bottom: 0;
    background: #fff;
    border-radius: 0.5em;
	border: 1px solid #999;
	box-shadow: 0 0 0.2em #ccc;
	padding: 0.5em;
	margin: 1em;
	margin-bottom: 0;
}
@media (max-width: 600px) {
.chord-composer-container {
  margin: 0 -6px;
  margin-top: 1em;
}
.chord-composer-container, .chord-composer-container button {
  font-size: 8px;
}
}
#chord-composer {
	max-width: fit-content;
	margin: auto;
}
#chord-composer > * {margin: 0.5em 0;}
#chord-composer button {
	border-radius: 0.2em;
	border: 1px solid #666;
}
#chord-composer button {background-color: #eee;}
#chord-composer button:hover {background-color: #ddd;}
#chord-composer button:active {filter: brightness(1.1);}

#chord-mod {
    display: grid;
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
    grid-template-rows: 1fr 1fr;
    width: 100%;
}
.chord-keyboard {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: 1fr 1fr;
}

.white.key {grid-row: span 2;}
.root-minor > *::after {content:  "m";}
.chord-bass > *::before {content: "/";}

